--- a/web/package.json
+++ b/web/package.json
@@ -21,6 +21,7 @@
     "next-urql": "^3.0.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-icons": "^4.2.0",
     "react-is": "^17.0.1",
     "urql": "^2.0.1"
   },
