--- a/server/package.json
+++ b/server/package.json
@@ -7,8 +7,7 @@
     "build": "tsc",
     "watch": "tsc -w",
     "dev": "nodemon dist/index.js",
-    "start": "node dist/index.js",
-    "migration:create": "mikro-orm migration:create"
+    "start": "node dist/index.js"
   },
   "keywords": [],
   "author": "",
@@ -25,10 +24,6 @@
     "typescript": "^4.2.3"
   },
   "dependencies": {
-    "@mikro-orm/cli": "^4.4.4",
-    "@mikro-orm/core": "^4.4.4",
-    "@mikro-orm/migrations": "^4.4.4",
-    "@mikro-orm/postgresql": "^4.4.4",
     "@types/ioredis": "^4.22.0",
     "@types/nodemailer": "^6.4.1",
     "@types/uuid": "^8.3.0",
@@ -46,12 +41,5 @@
     "type-graphql": "^1.1.1",
     "typeorm": "^0.2.31",
     "uuid": "^8.3.2"
-  },
-  "mikro-orm": {
-    "useTsNode": true,
-    "configPaths": [
-      "./src/mikro-orm.config.ts",
-      "./dist/mikro-orm.config.js"
-    ]
   }
 }
