--- a/web/package.json
+++ b/web/package.json
@@ -23,7 +23,8 @@
     "react-dom": "^17.0.1",
     "react-icons": "^4.2.0",
     "react-is": "^17.0.1",
-    "urql": "^2.0.1"
+    "urql": "^2.0.1",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "@graphql-codegen/cli": "^1.21.2",
@@ -33,6 +34,7 @@
     "@types/node": "^14.6.0",
     "@types/react": "^16.9.46",
     "@types/react-dom": "^16.9.8",
+    "@types/uuid": "^8.3.0",
     "typescript": "4.0.5"
   },
   "license": "MIT"
